--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <p>Cart</p>
 <p>
-  <a routeLink="/shipping">Shipping Prices</a>
+  <a routerLink="/shipping">Shipping Prices</a>
 </p>
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
