--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,5 +1,5 @@
 <p>Shipping Price</p>
-<div class="shipping-item" *ngFor="let shipping of shippingcosts | async">
+<div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
   <span>{{ shipping.type }}</span>
   <span>{{ shipping.price | currency }}</span>
 </div>
