--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -6,3 +6,14 @@
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
 </div>
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+  <div>
+    <lable for="name">Name</lable>
+    <input id="name" type="text" formControlName="name" />
+  </div>
+  <div>
+    <lable for="address">Address</lable>
+    <input id="address" type="text" formControlName="address" />
+  </div>
+  <button class="button" type="submit">Purchase</button>
+</form>
