--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -8,11 +8,11 @@
 </div>
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
   <div>
-    <lable for="name">Name</lable>
+    <label for="name">Name</label>
     <input id="name" type="text" formControlName="name" />
   </div>
   <div>
-    <lable for="address">Address</lable>
+    <label for="address">Address</label>
     <input id="address" type="text" formControlName="address" />
   </div>
   <button class="button" type="submit">Purchase</button>
